[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailvalidator"
version = "0.1.4"
description = "Mail server configuration assessment CLI utility"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
license-files = ["LICENSE"]
authors = [{ name = "t0kubetsu" }]
keywords = [
    "email",
    "email-security",
    "mail",
    "smtp",
    "dns",
    "dnsbl",
    "spf",
    "dmarc",
    "dkim",
    "bimi",
    "mta-sts",
    "tlsrpt",
    "dane",
    "tls",
    "cybersecurity",
    "security-audit",
    "domain-analysis",
    "networking",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Internet :: Name Service (DNS) :: DNS Utilities",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.6",
    "rich>=13.7",
    "typer>=0.12",
    "aiohttp>=3.9",
    "cryptography>=42",
    "chainvalidator @ file:./vendor/chainvalidator",
]

[project.urls]
Homepage = "https://github.com/t0kubetsu/mailvalidator"
Repository = "https://github.com/t0kubetsu/mailvalidator"
Issues = "https://github.com/t0kubetsu/mailvalidator/issues"
# Changelog      = "https://github.com/t0kubetsu/mailvalidator/blob/main/CHANGELOG.md"

[project.scripts]
mailvalidator = "mailvalidator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailvalidator*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=mailvalidator --cov-report=term-missing"
